[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Associative Map Support"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.11"
pandas = "2.1.4"
gspread = "5.12.3"
prefect = "2.16.3"
evernote-backup = "1.9.3"
tqdm = "4.66.2"
pyarrow = "15.0.1"
prefect-shell = "0.2.1"
dvc = "3.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.1.1"
ruff = "^0.8.0"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"